--- a/MybatisTest/src/main/resources/application.properties
+++ b/MybatisTest/src/main/resources/application.properties
@@ -5,17 +5,21 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.additional-paths:src/main/java
 #src/main/resources文件夹内容修改不重启
 spring.devtools.restart.exclude:src/main/resources/**
-#mybatis
+#数据库配置
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://121.196.179.74:3307/nbiot-area?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=root
 #mysql依赖在6.0.2版本之前的驱动是com.mysql.jdbc.Driver
 #在6.0.2版本之后则变为com.mysql.cj.jdbc.Driver
-db1.spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-db1.spring.datasource.jdbc-url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
-db1.spring.datasource.username=root
-db1.spring.datasource.password=intest@yw
-db2.spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-db2.spring.datasource.jdbc-url=jdbc:oracle:thin:@192.168.1.23:1521:ney
-db2.spring.datasource.username=platform
-db2.spring.datasource.password=intest
+#db1.spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#db1.spring.datasource.jdbc-url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
+#db1.spring.datasource.username=root
+#db1.spring.datasource.password=intest@yw
+#db2.spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#db2.spring.datasource.jdbc-url=jdbc:oracle:thin:@192.168.1.23:1521:ney
+#db2.spring.datasource.username=platform
+#db2.spring.datasource.password=intest
 #Hikari是性能最好的连接池
 #连接池名字
 spring.datasource.hikari.pool-name=MyHikariCP
@@ -32,6 +36,17 @@ spring.datasource.hikari.max-lifetime=1800000
 #数据库连接超时时间，默认30秒
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=select 1 from dual
+#mybatis
 #logging.level.com.example.web_demo.mybatis.*=debug
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis-plus
+mybatis-plus.mapper-locations=classpath:/mapper/*.xml
+mybatis-plus.global-config.db-config.id-type=AUTO
+mybatis-plus.global-config.db-config.field-strategy=NOT_EMPTY
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.cache-enabled=false
+mybatis-plus.configuration.call-setters-on-nulls=true
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
