--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -41,10 +41,17 @@ spring.mvc.static-path-pattern=/**
 #spring.quartz.job-store-type=memory
 #spring.quartz.scheduler-name=quartz-zam
 #redis
-#spring.redis.host=192.168.2.110
-#spring.redis.port=6379
-#spring.redis.password=
-#spring.redis.database=10
+spring.redis.host=47.99.162.240
+spring.redis.port=6379
+spring.redis.password=notiontest123
+spring.redis.database=10
+spring.redis.timeout=5000
+spring.redis.lettuce.pool.max-active=10
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=3
+spring.redis.lettuce.pool.max-wait=-1
+#每10s运行一次空闲连接回收器（独立线程）
+spring.redis.lettuce.pool.time-between-eviction-runs=10000
 #mongodb
 #spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
 #mybatis
