--- a/MybatisTest/src/main/resources/application.properties
+++ b/MybatisTest/src/main/resources/application.properties
@@ -1,17 +1,13 @@
 server.port=1234
-#开启热部署
 spring.devtools.restart.enabled=true
-#设置重启的目录
 spring.devtools.restart.additional-paths:src/main/java
-#src/main/resources文件夹内容修改不重启
 spring.devtools.restart.exclude:src/main/resources/**
-#数据库配置
+
+#datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://121.196.179.74:3307/nbiot-area?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://10.27.100.249:3306/watch?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
-#mysql依赖在6.0.2版本之前的驱动是com.mysql.jdbc.Driver
-#在6.0.2版本之后则变为com.mysql.cj.jdbc.Driver
 #db1.spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #db1.spring.datasource.jdbc-url=jdbc:mysql://192.168.2.110:3306/bq_n60?useUnicode=true&characterEncoding=utf8
 #db1.spring.datasource.username=root
@@ -20,26 +16,22 @@ spring.datasource.password=root
 #db2.spring.datasource.jdbc-url=jdbc:oracle:thin:@192.168.1.23:1521:ney
 #db2.spring.datasource.username=platform
 #db2.spring.datasource.password=intest
-#Hikari是性能最好的连接池
-#连接池名字
+
+#hikari
 spring.datasource.hikari.pool-name=MyHikariCP
-#最小空闲连接数
 spring.datasource.hikari.minimum-idle=20
-#空闲连接存活最大时间，默认10分钟
 spring.datasource.hikari.idle-timeout=600000
-#最大连接数，默认是10
 spring.datasource.hikari.maximum-pool-size=20
-#从连接池返回的连接的默认自动提交行为,默认值true
 spring.datasource.hikari.auto-commit=true
-#连接池中连接的最长生命周期，值0表示无限生命周期，默认1800000即30分钟
 spring.datasource.hikari.max-lifetime=1800000
-#数据库连接超时时间，默认30秒
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=select 1 from dual
+
 #mybatis
 #logging.level.com.example.web_demo.mybatis.*=debug
 mybatis.mapper-locations=classpath:/mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
 #mybatis-plus
 mybatis-plus.mapper-locations=classpath:/mapper/*.xml
 mybatis-plus.global-config.db-config.id-type=AUTO
