--- a/web_demo/src/main/resources/application.properties
+++ b/web_demo/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=1234
-#tomcat配置
 server.tomcat.max-threads=10
 server.tomcat.max-connections=100
 server.tomcat.accept-count=1000
@@ -11,17 +10,13 @@ server.tomcat.accesslog.prefix=access-log
 server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
 server.tomcat.accesslog.suffix=.log
 server.tomcat.accesslog.pattern=%t %{X-Forwarded-For}i %a %S [%H %r %s] '%I'
-#文件上传大小设置
 spring.servlet.multipart.max-file-size=300MB
 spring.servlet.multipart.max-request-size=500MB
-#记录请求原始ip，nginx反向代理记得配置以下信息
 #proxy_set_header Host $host;
 #proxy_set_header X-Real-IP $remote_addr;
 #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#视图配置
 spring.mvc.view.prefix=/view/
 spring.mvc.view.suffix=.jsp
-#静态文件
 spring.mvc.static-path-pattern=/**
 #rabbitmq
 #spring.rabbitmq.addresses=192.168.2.111:5672,192.168.2.112:5672
@@ -30,11 +25,8 @@ spring.mvc.static-path-pattern=/**
 #spring.rabbitmq.virtual-host=/
 #spring.rabbitmq.username=admin
 #spring.rabbitmq.password=admin
-#手动确认消息（默认是自动确认）
 #spring.rabbitmq.listener.simple.acknowledge-mode=manual
-#确认消息已发送到交换机
 #spring.rabbitmq.publisher-confirms=true
-#确认消息已发送到队列
 #spring.rabbitmq.publisher-returns=true
 #netty
 #netty.port=2222
@@ -51,7 +43,6 @@ spring.redis.lettuce.pool.max-active=10
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=3
 spring.redis.lettuce.pool.max-wait=-1
-#每10s运行一次空闲连接回收器（独立线程）
 spring.redis.lettuce.pool.time-between-eviction-runs=10000
 #mongodb
 #spring.data.mongodb.uri=mongodb://192.168.2.110:20000/nek
@@ -63,32 +54,19 @@ spring.redis.lettuce.pool.time-between-eviction-runs=10000
 #logging.level.com.example.web_demo.entity.*=debug
 #mybatis.mapper-locations=classpath:/mapper/*.xml
 #mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-#连接池名字
 #spring.datasource.hikari.pool-name=MyHikariCP
-#最小空闲连接数
 #spring.datasource.hikari.minimum-idle=5
-#空闲连接存活最大时间，默认10分钟
 #spring.datasource.hikari.idle-timeout=600000
-#最大连接数，默认是10
 #spring.datasource.hikari.maximum-pool-size=10
-#从连接池返回的连接的默认自动提交行为，默认值true
 #spring.datasource.hikari.auto-commit=true
-#连接池中连接的最长生命周期，默认30分钟，0表示无限生命周期
 #spring.datasource.hikari.max-lifetime=1800000
-#数据库连接超时时间，默认30秒
 #spring.datasource.hikari.connection-timeout=60000
-#mqtt配置
-#spring.mqtt.username=admin
-#spring.mqtt.password=password
-#服务器连接地址，如果有多个，用逗号隔开，如：tcp://127.0.0.1:61613,tcp://192.168.2.133:61613
-#spring.mqtt.url=tcp://10.27.100.230:1883
-#客户端ID
-#spring.mqtt.client.id=mqttId
-#推送主题
-#spring.mqtt.topic=topic,hello,hello1,hello2
-#连接超时
-#spring.mqtt.timeout=3000
-#极光推送
+#mqtt
+spring.mqtt.username=admin
+spring.mqtt.password=password
+spring.mqtt.url=tcp://127.0.0.1:61613
+spring.mqtt.client.id=mqttId
+#jpush
 jpush.appKey=06bd642f7a1387af9cd04dc7
 jpush.masterSecret=9ec09ea588ab10d9b53bb894
 jpush.liveTime=1000
